# todoapp

./: .dockerignore  .gitlab-ci.yaml  Dockerfile  db.sqlite3  docker-compose.yaml  pyproject.toml
ToDoApp/: settings.py  urls.py
api/: permissions.py  serializers.py  urls.py  views.py
postgres_data/base/1/: 2619  pg_internal.init
postgres_data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16389  16390  16395  16397  16398  16401  16403  16405  16406  16409  16411  16417  16419  16425  16432  16451  16456  16457  16459  16461  16465  16473  16487  16500  16501  16502  16510  16514  16516  16530  16531  16535  16537  16539  16540  (+54 more)
postgres_data/base/5/: 2619  pg_internal.init
postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
tasks/: admin.py  models.py  urls.py  views.py
tasks/migrations/: 0001_task.py  0002_alter_todoitem_todo_list.py
templates/: base.html
templates/allauth/layouts/: base.html
templates/tasks/: index.html  todo_list.html  todoitem_confirm_delete.html  todoitem_form.html  todolist_confirm_delete.html  todolist_form.html
users/migrations/: 0001_created_user_model.py
