[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["ivan <vaniaiv468@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
django = "^5.2"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
markdown = "^3.8"
django-allauth = "^65.7.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"